2007-08-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
	          src/kahua/server.scm, test/server.scm, cgi/kahua.cgi.in
	  Now cookie handling fit RFC2965 more.

	* Change: src/kahua/config.scm.in
	  Configurable item "session-domain" added.  It can have :site,
	  :bridge, :worker or session range URI or path(string). Default
	  value is :site.

2007-08-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/protocol/http.scm, src/kahua/protocol/worker.scm,
	          src/kahua/server.scm
	  Procedures path->path-info, path-info->abs-path, normalize-path,
	  rel-path-info are moved from kahua.protocol.http to
	  kahua.protocol.worker module,  and simplify-path-info is out
	  of path->path-info and exported.  So kahua-self-uri is use
	  simplify-path-info instead of simplify-path(of file.util).

	* Change: src/kahua/server.scm
	  Revert the change at 2007-08-10(r3001), and only delete
	  x-kahua-metavariables.

	* Fix: examples/login/login.kahua
	  Build URI of redirect location using kahua-self-uri-full
	  intead of ad-hoc path building.

	* Fix: src/kahua/server.scm
	  Build path of return-cont or remote-cont using kahua-self-uri
	  instead of ad-hoc path building.

2007-08-11  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Add add-extra-header(internal) and arrange code that handle
	  extra-header (almost content-type).

	* Change: src/kahua/protocol/http.scm
	  Use functionality below to define *default-content-type*.

	* Change: src/kahua/util.scm
	  Add *default-charset*(move from kahua.protocol.http) and
          make-content-type.

2007-08-10  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Worker return only x-kahua-sgsid (instead of all headers passed
	  from bridge program) and extra-headers and x-kahua-headers.

	* Change: src/kahua/persistence.scm
	  Add sort method for <kahua-collection> is added for convenience