@@ -1,8 +1,12 @@
 2007-08-15  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Change: src/kahua/server.scm
+	  Add interp-text for text/plain handling.
+	  Fix interp-rss encoding.
+
 	* Change: src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
 	          src/kahua/server.scm, test/server.scm, cgi/kahua.cgi.in
-	  Now cookie handling fit RFC2965 more.
+	  Now cookie handling fit to RFC2965 more.
 
 	* Change: src/kahua/config.scm.in
 	  Configurable item "session-domain" added.  It can have :site,
